# the-code-book

./: .gitignore  .pre-commit-config.yaml  README.md  build.ninja  dev_requirements.txt  pyproject.toml  setup.cfg
codebook/: __init__.py  rsa.py  substitution.py  transposition.py  utils.py
docs/: codebook.html  index.html  search.js
docs/codebook/: rsa.html  substitution.html  transposition.html
tests/: test_rsa.py  test_substitution.py  test_transposition.py  test_utils.py
