[metadata]
name = codebook
description = "Code along to Simon Singh's The Code Book"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlgs/the-code-book
author = Tiago Seabra
author_email = tlgs@users.noreply.github.com
license = UNLICENSE
license_files = UNLICENSE

[options]
packages = codebook

[options.extras_require]
dev =
    coverage
    pdoc
    pre-commit
    pytest
